--- a/index.html
+++ b/index.html
@@ -168,7 +168,123 @@
 </section>
 
 <section class="wrapper-5">
+    <div class="container wrapper-5-content">
+        <div class="wrapper-5-customers">
+            <img src="img/icon/customers-group.png" alt="">
+            <p class="people">89%</p>
+            <p class="">Customers who have <br>increased their productivity</p>
+        </div>
+        <div class="wrapper-5-users">
+            <img src="img/icon/users-group.png" alt="">
+            <p class="people">3123</p>
+            <p>Users who have used our application</p>
+        </div>
+    </div>
+</section>
 
+<section class="wrapper-6">
+    <div class="container wrapper-6__content">
+        <p class="wrapper-6__pre-title">our resources</p>
+        <h2>Start reading our blog</h2>
+
+        <div class="wrapper-6__content-info">
+
+            <div class="wrapper-6__content-info__slides">
+                <div class="wrapper-6__content-info__slides__elem1">
+                    <div class="big-imag-wrapper">
+                        <img src="img/slide-big-image.png" alt="">
+                        <img class="change-size" src="img/icon/image-loop.png" alt="">
+                    </div>
+                    <div>
+                        <img src="img/slide-small-image1.png" alt="">
+                        <img src="img/slide-small-image2.png" alt="">
+                    </div>
+                </div>
+                <div class="wrapper-6__content-info__slides__elem2">
+                    <h3>How to start planning</h3>
+                    <p>Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero
+                        tractatos ius an, in mel diceret persecuti. Natum petentium principes mei ea. Tota everti
+                        periculis vis ei, quas tibique pro at, eos ut decore ...
+                    </p>
+                    <div class="slide-elem2__button">
+                        <a class="read-now-button" href="#">Read now</a>
+                        <a class="add-your-button">Add to your bookmarks</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="arrow-nav">
+                <a class="arrow-left" href="#">
+                    <svg width="27" height="19" viewBox="0 0 27 19" fill="none"
+                         xmlns="http://www.w3.org/2000/svg">
+                        <path d="M25 9.5L2 9.5M2 9.5L9.81132 17M2 9.5L9.81132 2" stroke="#A8B4E5" stroke-width="3"
+                              stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </a>
+                <a class="arrow-right" href="#">
+                    <svg width="27" height="19" viewBox="0 0 27 19" fill="none"
+                         xmlns="http://www.w3.org/2000/svg">
+                        <path d="M25 9.5L2 9.5M2 9.5L9.81132 17M2 9.5L9.81132 2" stroke="#A8B4E5" stroke-width="3"
+                              stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </a>
+            </div>
+        </div>
+
+        <div class="wrapper-6__sliders">
+            <div class="active"></div>
+            <div></div>
+            <div></div>
+        </div>
+
+    </div>
+</section>
+
+<section class="wrapper-7">
+    <div class="container">
+        <div class="text-block">
+
+        </div>
+
+        <div class="card-block">
+            <div class="cards-wrapper">
+                <div class="card-item active">
+                    <p>Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero
+                        tractatos ius an, in mel diceret persecuti.
+                    </p>
+                    <img src="img/avatar.png" alt="">
+                </div>
+                <div class="card-item">
+                    <p>Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero
+                        tractatos ius an, in mel diceret persecuti.
+                    </p>
+                    <img src="img/avatar.png" alt="">
+                </div>
+                <div class="card-item">
+                    <p>Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero
+                        tractatos ius an, in mel diceret persecuti.
+                    </p>
+                    <img src="img/avatar.png" alt="">
+                </div>
+                <div class="card-item">
+                    <p>Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero
+                        tractatos ius an, in mel diceret persecuti.
+                    </p>
+                    <img src="img/avatar.png" alt="">
+                </div>
+            </div>
+
+            <div class="cards-nav">
+                <div></div>
+                <div></div>
+                <div class="active"></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+    </div>
 </section>
 
 </body>
